<resources>
    <string name="app_name">Swing</string>
    <string name="activity_main_synchronize">Sync</string>
    <string name="activity_main_wait">Please Wait&#8230;</string>
    <string name="title_boot">Boot</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_photo">Photo</string>
    <string name="title_profile">Profile</string>
    <string name="title_option">Options</string>
    <string name="title_password">Password</string>
    <string name="title_request_from">Request From</string>
    <string name="title_request_to">Send Requests To</string>
    <string name="title_search_device">Search Device</string>
    <string name="title_sync">Sync</string>
    <string name="calendar_alarm_agenda">Agenda</string>
    <string name="calendar_alarm_clock">Alarm Clock</string>
    <string name="calendar_alarm_morning">Morning Routine</string>
    <string name="calendar_alarm_bed">Bed Time Routine</string>
    <string name="calendar_alarm_activities">Activity</string>
    <string name="calendar_event_creator">Creator</string>
    <string name="calendar_event_assign">Assign To</string>
    <string name="calendar_event_event">Select Event</string>
    <string name="calendar_event_start">Start</string>
    <string name="calendar_event_end">End</string>
    <string name="calendar_event_color">Color Label</string>
    <string name="calendar_event_repeat">Repeat</string>
    <string name="calendar_event_description">Description</string>
    <string name="calendar_event_todo_list">To Do List</string>
    <string name="calendar_event_save">Save</string>
    <string name="calendar_event_advance">Advance</string>
    <string name="calendar_event_please_select_event">Please select event</string>
    <string name="calendar_main_today_schedule">Today\'s Schedule</string>
    <string name="calendar_main_monthly_schedule">Monthly Schedule</string>
    <string name="calendar_main_no_incoming_event">No Event</string>
    <string name="calendar_month_sync">Sync Now</string>
    <string name="calendar_todo_save">Save</string>
    <string name="calendar_todo_processing">Processing</string>
    <string name="calendar_todo_wait">Please Wait&#8230;</string>
    <string name="dashboard_chart_indoor">Indoor</string>
    <string name="dashboard_chart_outdoor">Outdoor</string>
    <string name="dashboard_chart_today">Today</string>
    <string name="dashboard_chart_this_week">This Week</string>
    <string name="dashboard_chart_this_month">This Month</string>
    <string name="dashboard_chart_this_year">This Year</string>
    <string name="dashboard_chart_message_below">Don\'t Give Up. You Can Do This!</string>
    <string name="dashboard_chart_message_almost">One More Time. You Are Almost There!</string>
    <string name="dashboard_chart_message_excellent">Woohoo! You\'ve Reached Your Goal!</string>
    <string name="dashboard_chart_steps">Steps</string>
    <string name="dashboard_main_message">Would You Like to Sync Now?</string>
    <string name="dashboard_main_yes">Yes, Please</string>
    <string name="dashboard_main_dashboard">No, Go to Dashboard</string>
    <string name="dashboard_main_another">Sync Another Watch</string>
    <string name="dashboard_main_no_device">You have not bind device yet.</string>
    <string name="dashboard_emotion_hello">How Are You Doing Today?</string>
    <string name="dashboard_emotion_excellent">Excellent!</string>
    <string name="dashboard_emotion_almost">Almost There!</string>
    <string name="dashboard_emotion_below">Below Average!</string>
    <string name="dashboard_emotion_steps">Steps</string>
    <string name="dashboard_progress_searching">Searching\nfor your\nWatch</string>
    <string name="dashboard_progress_found">Found\nYour\nWatch</string>
    <string name="dashboard_progress_sync_now">Sync Now</string>
    <string name="dashboard_progress_syncing">Syncing</string>
    <string name="dashboard_progress_completed">Completed</string>
    <string name="dashboard_progress_dashboard">Go to Dashboard</string>
    <string name="dashboard_progress_not_found">We can\'t find\nyour Watch!</string>
    <string name="dashboard_progress_again">Try Again</string>
    <string name="dashboard_progress_last">Go to Last Synced Data</string>
    <string name="dashboard_progress_server_not_reach">Can\'t Reach Server!</string>
    <string name="dashboard_progress_enable_gps">Please enable your GPS?</string>
    <string name="dashboard_request_request">Request Access</string>
    <string name="dashboard_add_watch">Add a watch</string>
    <string name="dashboard_request_profile">Go to Profile</string>
    <string name="dashboard_request_process">Processing</string>
    <string name="dashboard_request_waiting">Please Wait&#8230;</string>
    <string name="dashboard_request_pending">Request Pending.\nAwaiting Responses</string>
    <string name="dashboard_request_no_data">You Don\'t Have any\nData yet</string>
    <string name="dashboard_request_owner">%s\'s Watch</string>
    <string name="dashboard_watch_message">Please Select Your\nSwing Watch</string>
    <string name="device_battery">Battery</string>
    <string name="device_searching">Searching&#8230;</string>
    <string name="device_not_found">Not Found</string>
    <string name="device_no_watch">You are not Connected to Any Device Yet</string>
    <string name="device_owner">%s\'s Watch</string>
    <string name="photo_clip_cancel">Cancel</string>
    <string name="photo_clip_take_photo">Use Photo</string>
    <string name="profile_added_added">Added</string>
    <string name="profile_added_successfully">We\'ve Successfully Added Your\nSwing Watch</string>
    <string name="profile_added_profile">Set up Your Profile</string>
    <string name="profile_editor_first_name">First Name</string>
    <string name="profile_editor_last_name">Last Name</string>
    <string name="profile_editor_phone">Phone Number</string>
    <string name="profile_editor_mail_address">Mail Address</string>
    <string name="profile_editor_address1">Address 1</string>
    <string name="profile_editor_address2">Address 2</string>
    <string name="profile_editor_city">City</string>
    <string name="profile_editor_zip">Zip</string>
    <string name="profile_editor_processing">Processing</string>
    <string name="profile_editor_wait">Please Wait</string>
    <string name="profile_editor_avatar_failed">Update Failed</string>
    <string name="profile_kid_name">Name</string>
    <string name="profile_kid_remove">Remove</string>
    <string name="profile_kid_processing">Processing</string>
    <string name="profile_kid_wait">Please Wait&#8230;</string>
    <string name="profile_kid_name_not_blank">Kid Name is Blank</string>
    <string name="profile_main_hosting">My devices</string>
    <string name="profile_main_shared">Devices shared with Me</string>
    <string name="profile_main_request_to">Your pending request to</string>
    <string name="profile_main_request_from">You have requests from</string>
    <string name="profile_option_account">Account</string>
    <string name="profile_option_kid">Edit Your Kid\'s Profile</string>
    <string name="profile_option_password">Reset Password</string>
    <string name="profile_option_logout">Logout</string>
    <string name="profile_option_about">About</string>
    <string name="profile_option_contact_us">Contact Us</string>
    <string name="profile_option_privacy_policy">Privacy Policy</string>
    <string name="profile_option_manual">User guide</string>
    <string name="profile_option_version">Version</string>
    <string name="profile_password_current">Current Password</string>
    <string name="profile_password_new">New Password</string>
    <string name="profile_password_again">New Password, Again!</string>
    <string name="profile_reset_password_confirmation">Are you sure you want to reset your password?</string>
    <string name="profile_reset_password_note">Please check your email at %s for the link to reset your password. This link will expire in 24 hours.</string>
    <string name="profile_registered_registered">This Watch Has\nBeen Registered</string>
    <string name="profile_registered_request_access">Request Access</string>
    <string name="profile_registered_contact_us">Contact Us</string>
    <string name="profile_registered_processing">Processing</string>
    <string name="profile_registered_wait">Please Wait&#8230;</string>
    <string name="profile_request_from_processing">Processing</string>
    <string name="profile_request_from_wait">Please Wait</string>
    <string name="profile_request_from_count">You Have %d Requests</string>
    <string name="profile_request_to_mail">Search User\'s Email</string>
    <string name="profile_request_to_users">User</string>
    <string name="profile_request_to_others">Request Access to Others</string>
    <string name="profile_request_to_send">Send</string>
    <string name="profile_request_to_cancel">Cancel</string>
    <string name="profile_request_to_processing">Processing</string>
    <string name="profile_request_to_wait">Please Wait&#8230;</string>
    <string name="profile_search_searching">Searching</string>
    <string name="profile_search_mac_failed">Search MAC failed</string>
    <string name="profile_select_watch">Please Select\nYour Swing Watch</string>
    <string name="profile_share_save">Save</string>
    <string name="profile_share_who">Select Swing Watch to\nShare with %s</string>
    <string name="profile_sorry_sorry">Sorry!</string>
    <string name="profile_sorry_message">We Couldn’t Find Your Swing Watch. Please\nMake Sure Your Watch Is Fully Charged</string>
    <string name="profile_sorry_again">Search Again</string>
    <string name="profile_sorry_others">Request Access to Others</string>
    <string name="profile_sorry_contact_us">Contact Us</string>
    <string name="signup_login_email">Email</string>
    <string name="signup_login_password">Password</string>
    <string name="signup_login_login_failed">Login Failed</string>
    <string name="signup_login_processing">Processing</string>
    <string name="signup_login_wait">Please Wait&#8230;</string>
    <string name="signup_login_enter">Login</string>
    <string name="signup_login_reset_password">Reset password</string>
    <string name="signup_language_message">Please Select\nYour Language</string>
    <string name="profile_option_edit">Edit profile</string>
    <string name="profile_option_change_password">Change password</string>
    <string name="profile_option_switch">Switch watch account</string>
    <string name="profile_option_language">Language</string>
    <string name="profile_manage_access_swing">Manage access permission of Swing</string>
    <string name="profile_decline_request_from">Decline</string>
    <string name="profile_request_access">Request access</string>
    <string name="safe_warn_msg_title">安全性の通知</string>
    <string name="safe_warn_msg_btn">このメッセージを読みました</string>
    <string name="app_safe_warning_msg">親愛なる顧客の皆様\n\n

弊社Swing Watchをご愛顧いただき、誠にありがとうございます。\n\n

お子様が健やかに過ごされていることが、私共の最優先事項です。Swing watchの防水性に伴う潜在的な懸念についてお知らせいたします。\n\n

Swing Watchは、ヨーロッパと日本で必要とするべき安全性の法令を全て遵守しています。また、取扱い説明書もご用意しております。しかしながら、成人なら対応できるような注意を伴う機器の取り扱いを、使用者である幼児に求めることは課題があると認識しております。\n\n

初期設計段階で想定されている範囲より多い水分でSwing Watchが曝された可能性のあるお子様のケースを認知しております。一定の条件が整った場合、Swing Watchの動作が逸脱し、最悪の場合、電気的な異常によりお子様を傷つけてしまう可能性がございます。\n\n

弊社では特命チームを編成し、この潜在的な安全性を脅かす課題について緊急に解決策を求めて対応しています。また、早期に解決策を提供できるように望んでおります。それまでの間、Swing Watchをご使用中のお子様の安全のために以下の留意事項を守っていただけますようご理解とお願い申し上げます。\n\n

１、Swing Watchが水に浸ることのないようにしてください。\n\n

２、乾燥した状態で保つようにしてください。お風呂やシャワーを浴びる際は、必ず取り外していただき、蒸気がこもる可能性のあるお部屋等には放置しないようお願いします。\n\n

３、Swing Watchが湿気、水分、汗等に曝された場合は、なるべく早急に本体を乾いた布で拭いていただき、水分が内部にしみ込まないよう、本体を乾いた状態で保ってください。\n\n

４、睡眠時にはSwing Watchを取り外してください。\n\n

上記のお願いをご理解いただきましてありがとうございます。Swing Watchの安全性と利便性を更に向上すべく対応して参ります。また最新の状況について継続的にご報告して参ります。\n
</string>
</resources>