<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical">

    <include layout="@layout/base_title_bar"
        android:background="@color/color_white"/>

    <View android:layout_width="match_parent"
        android:layout_height="@dimen/base_1"
        android:background="@color/color_blue_sky"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <com.kidsdynamic.swing.view.AvenirTextView
        style="@style/textview_toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:textStyle="bold"
        android:text="@string/profile_option_account" />

    <RelativeLayout
        android:id="@+id/profile_edit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_item_height"
        android:background="@drawable/option_background"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">

        <TextView
            android:id="@+id/tv_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/profile_option_edit" />

        <ImageView
            style="@style/option_right_img" />
    </RelativeLayout>
    <View
        style="@style/option_line"
        android:visibility="visible" />

    <!--change password-->
    <RelativeLayout
        android:id="@+id/profile_option_change_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_item_height"
        android:background="@drawable/option_background"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">

        <TextView
            android:id="@+id/tv_change_psw"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/profile_option_change_password" />

        <ImageView
            style="@style/option_right_img" />
    </RelativeLayout>
    <View
        style="@style/option_line"
        android:visibility="visible" />

    <!--edit kids profile-->
    <RelativeLayout
        android:id="@+id/profile_option_profile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_item_height"
        android:background="@drawable/option_background"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">

        <TextView
            android:id="@+id/tv_edit_kids"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/profile_option_kid" />

        <ImageView
            style="@style/option_right_img" />
    </RelativeLayout>

    <View
        style="@style/option_line"
        android:visibility="visible" />

    <!--watch shared with others-->
    <RelativeLayout
        android:id="@+id/profile_option_watch_share"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_item_height"
        android:background="@drawable/option_background"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">

        <TextView
            android:id="@+id/tv_manager_access"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/profile_manage_access_swing" />

        <ImageView
            style="@style/option_right_img" />
    </RelativeLayout>

    <View
        style="@style/option_line"
        android:visibility="visible" />

    <!--switch watch account-->
    <RelativeLayout
        android:id="@+id/profile_option_switch_watch_account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_item_height"
        android:background="@drawable/option_background"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_switch_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/profile_option_switch" />

        <ImageView
            style="@style/option_right_img" />
    </RelativeLayout>

    <View
        style="@style/option_line"
        android:visibility="visible" />

    <!--reset password-->
    <RelativeLayout
        android:id="@+id/profile_option_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/option_background"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:visibility="gone">

        <com.kidsdynamic.swing.view.AvenirTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/profile_option_password" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:src="@drawable/icon_right" />
    </RelativeLayout>

    <View
        style="@style/option_line"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/profile_option_logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_item_height"
        android:background="@drawable/option_background"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">

        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/profile_option_logout" />

        <ImageView
            style="@style/option_right_img" />
    </RelativeLayout>

    <View
        style="@style/option_line" />

    <TextView
        android:id="@+id/tv_about"
        style="@style/textview_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_item_height"
        android:gravity="center"
        android:layout_marginTop="@dimen/base_10"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:text="@string/profile_option_about" />

    <RelativeLayout
        android:id="@+id/profile_option_language"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_item_height"
        android:background="@drawable/option_background"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">

        <TextView
            android:id="@+id/tv_language"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/profile_option_language" />

        <ImageView
            style="@style/option_right_img" />
    </RelativeLayout>

    <View
        style="@style/option_line" />

    <RelativeLayout
        android:id="@+id/profile_option_contact"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_item_height"
        android:background="@drawable/option_background"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">

        <TextView
            android:id="@+id/tv_contact_us"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/profile_option_contact_us" />

        <ImageView
            style="@style/option_right_img" />
    </RelativeLayout>

    <View
        style="@style/option_line"
        android:visibility="gone" />

    <!--privacy_policy-->
    <RelativeLayout
        android:id="@+id/profile_option_privacy"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/option_background"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_privacy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/profile_option_privacy_policy" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:src="@drawable/icon_right" />
    </RelativeLayout>

    <View
        style="@style/option_line" />

    <RelativeLayout
        android:id="@+id/profile_option_manual"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_item_height"
        android:background="@drawable/option_background"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">

        <TextView
            android:id="@+id/tv_user_guide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/profile_option_manual" />

        <ImageView
            style="@style/option_right_img" />
    </RelativeLayout>

    <View
        style="@style/option_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_item_height"
        android:background="@drawable/option_background"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/profile_option_version" />

        <com.kidsdynamic.swing.view.AvenirTextView
            android:id="@+id/profile_option_version"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|end"
            android:paddingEnd="20dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>