<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/base_title_bar" />

    <cn.carbs.android.avatarimageview.library.AvatarImageView
        android:id="@+id/watch_sync_photo"
        android:layout_width="124dp"
        android:layout_height="124dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/base_30"
        app:crossColor="@color/hex_1b89cd"
        app:crossWidth="2dp"
        app:strokeColorNormal="@color/hex_1b89cd" />

    <TextView
        android:id="@+id/tv_kids_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_5"
        android:gravity="center_horizontal|top"
        android:text=""
        android:textColor="@color/profile_logout_confirm_name"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_dashboard_main_note"
        style="@style/textview_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/base_56"
        android:layout_marginRight="@dimen/base_56"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/dashboard_main_message"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/base_56"
        android:layout_marginRight="@dimen/base_56"
        android:layout_weight="6"
        android:orientation="vertical">

        <Button
            android:id="@+id/watch_sync_yes"
            style="@style/button_main"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:text="@string/dashboard_main_yes" />

        <Button
            android:id="@+id/watch_sync_no"
            style="@style/button_main"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:text="@string/dashboard_main_dashboard" />

        <Button
            android:id="@+id/watch_sync_add"
            style="@style/button_main"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:text="@string/dashboard_main_another" />
    </LinearLayout>
</LinearLayout>