<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_blue_sky"
    android:orientation="vertical">

    <include layout="@layout/base_title_bar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:layout_marginTop="@dimen/base_10">

            <!--request from note-->
            <LinearLayout
                android:id="@+id/layout_request_from_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/base_35"
                android:layout_gravity="center_vertical"
                android:visibility="visible">

                <com.kidsdynamic.swing.view.AvenirTextView
                    android:id="@+id/state_note"
                    android:text="@string/profile_request_access"
                    style="@style/profile_info_tip_tv"
                    android:textStyle="bold"/>

                <include layout="@layout/item_search_user_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/base_35"
                    android:layout_marginLeft="@dimen/base_51"
                    android:layout_marginRight="@dimen/base_51"
                    android:layout_marginBottom="@dimen/base_35"/>

                <Button
                    android:id="@+id/btn_accept_request"
                    style="@style/btn_main_profile"
                    android:layout_width="match_parent"
                    android:text="@string/profile_sorry_again" />

                <Button
                    android:id="@+id/btn_decline"
                    style="@style/btn_main_profile"
                    android:layout_width="match_parent"
                    android:text="@string/profile_decline_request_from" />

            </LinearLayout>

    </ScrollView>




</LinearLayout>