<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_blue_sky"
    android:orientation="vertical">

    <include layout="@layout/base_title_bar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/layout_all"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/base_65"
            android:paddingBottom="@dimen/base_20"
            android:paddingStart="@dimen/profile_edit_padding_StartEnd"
            android:paddingEnd="@dimen/profile_edit_padding_StartEnd">

            <EditText
                android:id="@+id/profile_new_psw"
                android:background="@drawable/contact_background"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                style="@style/edittext_profile"
                android:layout_gravity="center_vertical"
                android:hint="@string/profile_password_new"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/profile_new_psw_2"
                style="@style/edittext_profile"
                android:background="@drawable/contact_background"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:hint="@string/profile_password_again"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/btn_update_psw"
                style="@style/button_main"
                android:layout_marginTop="@dimen/base_10"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:text="@string/profile_share_save" />

        </LinearLayout>

    </ScrollView>




</LinearLayout>